Improve readability of second-order list items. Deals with issue #223
And fix strange issue with bullets showing at the bottom of the list item.

--- a/app/sass/components/_sidebar-left.scss
+++ b/app/sass/components/_sidebar-left.scss
@@ -44,11 +44,10 @@
         border-bottom:1px solid lighten($gray-light, 24%);
         li {
           list-style: disc;
-          margin-left:$font-size-base*1.5;
+          margin:0.5em 0 0.5em 1.7em;
           padding-left:0;
           a {
             border:none;
-            display: inline-block;
             padding:0;
             border:none;
             @include hoverActiveFocus($sand, $blue, underline);  
